--- a/Web/FederationIdentityProvider/Client/app/home/home.component.html
+++ b/Web/FederationIdentityProvider/Client/app/home/home.component.html
@@ -1,12 +1,13 @@
 ﻿<div class="col-md-6 col-md-offset-3">
-    <h1>Hi {{currentUser.firstName}}!</h1>
+    <!--<h1>Hi {{currentUser.firstName}}!</h1>-->
     <p>You're logged in with Angular 2!!</p>
-    <h3>All registered users:</h3>
-    <ul>
+    <h3>Signed on user:</h3>
+    <h1>{{currentUser.username}} {{currentUser.lastName}}, {{currentUser.firstName}}!</h1>
+    <!--<ul>
         <li *ngFor="let user of users">
             {{user.username}} ({{user.firstName}} {{user.lastName}})
             - <a (click)="deleteUser(user.id)">Delete</a>
         </li>
-    </ul>
+    </ul>-->
     <p><a [routerLink]="['/login']">Logout</a></p>
 </div>
